--- a/index.html
+++ b/index.html
@@ -3,31 +3,27 @@
 <head>
   <!--
     RenderHeads Rod Bundle
-    Version: v0.8.6
+    Version: v0.9.0
     Date: 2026-01-20
 
-    Changes from v0.8.5:
-    - Removed Ping Light UI + logic
-    - Added a SECOND directional light (Fill) with full controls (intensity, azimuth, elevation)
-      to accentuate form/shadows with key+fill lighting.
-    - Kept Colour controls (Palette/Single + Brightness)
+    Changes from v0.8.9:
+    - Removed cap highlight idea entirely (no extra cap mesh, no end-face lighting).
+    - Added REAL shadows with a single toggle: Shadows On/Off.
+    - When ON:
+      - renderer.shadowMap enabled
+      - keyLight + fillLight cast shadows
+      - rods cast shadows
+      - a subtle ground plane receives shadows (can be invisible but still receive)
 
-    Stable baseline retained:
-    - Square-ended rods (BoxGeometry)
-    - Grid / Hex packing
-    - Up to 200 rods
-    - Thickness control
-    - Hover interaction (travel along rod length via Y)
-    - Keyboard letter imprint (keydown + keyup hold)
-    - Audio (Option C: only when hovered rod changes)
-    - Global rotation + global scale
-    - Lighting controls (direction + intensity)
-    - Optional per-rod spin (Rod Spin: On/Off)
+    Retained:
+    - 2 directional lights (Key + Fill) + Ambient controls
+    - Colour controls (Palette/Single + Brightness)
+    - Square-ended rods, packing, thickness, 200 rods, rotation/scale, hover, audio, letter imprint, rod spin toggle.
     - UI + Logo hide/show button
   -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>RenderHeads Rod Bundle v0.8.6</title>
+  <title>RenderHeads Rod Bundle v0.9.0</title>
 
   <style>
     html, body { margin: 0; padding: 0; overflow: hidden; background: #0b0b0b; }
@@ -136,6 +132,14 @@
       </select>
     </label>
 
+    <label>
+      Shadows
+      <select id="shadows">
+        <option value="off" selected>Off</option>
+        <option value="on">On</option>
+      </select>
+    </label>
+
     <label>Scale <input id="scale" type="range" min="0.2" max="2.5" step="0.01" value="1"></label>
     <label>Spacing <input id="spacing" type="range" min="0.2" max="1.5" step="0.01" value="0.5"></label>
     <label>Interaction <input id="interaction" type="range" min="0" max="2" step="0.01" value="1"></label>
@@ -207,7 +211,7 @@
 
   <script type="module">
     (async () => {
-      const APP_VERSION = 'v0.8.6';
+      const APP_VERSION = 'v0.9.0';
       console.log('RenderHeads Rod Bundle', APP_VERSION);
 
       // UI toggle (hide/show BOTH UI panel + logo)
@@ -266,7 +270,7 @@
       renderer.outputColorSpace = THREE.SRGBColorSpace;
       document.body.appendChild(renderer.domElement);
 
-      // Lighting
+      /* ---------------- Lighting ---------------- */
       const ambient = new THREE.AmbientLight(0xffffff, 0.35);
       scene.add(ambient);
 
@@ -278,10 +282,22 @@
       scene.add(fillLight);
       scene.add(fillLight.target);
 
+      /* ---------------- Shadow receiver (ground) ----------------
+         This plane is mostly invisible but gives you real contact shadows.
+         If you want to actually see a surface, increase its opacity. */
+      const groundGeo = new THREE.PlaneGeometry(200, 200);
+      const groundMat = new THREE.ShadowMaterial({ opacity: 0.22 });
+      const ground = new THREE.Mesh(groundGeo, groundMat);
+      ground.rotation.x = -Math.PI / 2;
+      ground.position.y = -1.2;
+      ground.receiveShadow = true;
+      scene.add(ground);
+
       /* ---------------- DOM controls ---------------- */
       const packingSelect = document.getElementById('packing');
       const renderModeSelect = document.getElementById('renderMode');
       const rodSpinSelect = document.getElementById('rodSpin');
+      const shadowsSelect = document.getElementById('shadows');
 
       const scaleSlider = document.getElementById('scale');
       const spacingSlider = document.getElementById('spacing');
@@ -323,7 +339,6 @@
       let rodCount = parseInt(countSlider.value, 10);
       countLabel.textContent = String(rodCount);
 
-      // thickness via scale X/Z
       let rodThickness = parseFloat(diameterSlider.value);
       diameterLabel.textContent = rodThickness.toFixed(2);
 
@@ -332,7 +347,6 @@
         0xf57c00, 0xd32f2f, 0xfbc02d, 0xe91e63, 0x8e245d
       ];
 
-      // Square-ended rods: box with length ~3 (Y), and square cross-section (X/Z)
       const geometry = new THREE.BoxGeometry(2, 3, 2);
 
       function applyRenderMode() {
@@ -356,19 +370,65 @@
         const bright = parseFloat(brightnessSlider.value);
 
         if (mode === 'single') {
-          const c = new THREE.Color(singleColorInput.value);
-          c.multiplyScalar(bright);
-          for (const r of rods) r.material.color.copy(c);
+          const base = new THREE.Color(singleColorInput.value).multiplyScalar(bright);
+          for (const r of rods) {
+            r.userData.baseColor.copy(base);
+            r.material.color.copy(base);
+          }
         } else {
           for (const r of rods) {
-            const c = new THREE.Color(palette[r.userData.idx % palette.length]);
-            c.multiplyScalar(bright);
-            r.material.color.copy(c);
+            const base = new THREE.Color(palette[r.userData.idx % palette.length]).multiplyScalar(bright);
+            r.userData.baseColor.copy(base);
+            r.material.color.copy(base);
           }
         }
       }
 
-      /* ---------------- Letter imprint (keydown + keyup hold) ---------------- */
+      function applyShadows() {
+        const on = shadowsSelect.value === 'on';
+
+        renderer.shadowMap.enabled = on;
+        renderer.shadowMap.type = THREE.PCFSoftShadowMap;
+
+        keyLight.castShadow = on;
+        fillLight.castShadow = on;
+
+        ground.visible = on;         // show the shadow material plane only when needed
+        ground.receiveShadow = on;
+
+        for (const r of rods) {
+          r.castShadow = on;
+          r.receiveShadow = false;   // rods receiving shadows can look noisy; keep off for clarity
+        }
+
+        // Shadow quality / size (tweakable, but kept stable)
+        if (on) {
+          // key light shadows
+          keyLight.shadow.mapSize.set(2048, 2048);
+          keyLight.shadow.bias = -0.0002;
+          keyLight.shadow.normalBias = 0.02;
+
+          // fill light subtle shadows (optional)
+          fillLight.shadow.mapSize.set(1024, 1024);
+          fillLight.shadow.bias = -0.0002;
+          fillLight.shadow.normalBias = 0.02;
+
+          const setShadowFrustum = (light) => {
+            const cam = light.shadow.camera;
+            cam.near = 1;
+            cam.far = 60;
+            cam.left = -18;
+            cam.right = 18;
+            cam.top = 18;
+            cam.bottom = -18;
+            cam.updateProjectionMatrix();
+          };
+          setShadowFrustum(keyLight);
+          setShadowFrustum(fillLight);
+        }
+      }
+
+      /* ---------------- Letter imprint ---------------- */
       let letterMask = [];
       let letterMix = 0;
       let letterMixTarget = 0;
@@ -493,19 +553,21 @@
         rods.length = 0;
 
         for (let i = 0; i < rodCount; i++) {
-          const material = new THREE.MeshStandardMaterial({
+          const rodMat = new THREE.MeshStandardMaterial({
             color: palette[i % palette.length],
             roughness: 0.5,
             metalness: 0.05,
             wireframe: renderModeSelect.value === 'wire'
           });
 
-          const rod = new THREE.Mesh(geometry, material);
+          const rod = new THREE.Mesh(geometry, rodMat);
+
           rod.userData = {
             idx: i,
             basePosition: new THREE.Vector3(),
             phase: Math.random() * Math.PI * 2,
-            hoverStrength: 0
+            hoverStrength: 0,
+            baseColor: new THREE.Color(palette[i % palette.length])
           };
 
           rods.push(rod);
@@ -519,9 +581,10 @@
         applyThickness();
         applyColors();
         layoutRods();
+        applyShadows();
       }
 
-      /* ---------------- Lighting controls (key + fill) ---------------- */
+      /* ---------------- Lighting controls ---------------- */
       function setDirectionalFromSpherical(light, azDeg, elDeg, r) {
         const az = (azDeg * Math.PI) / 180;
         const el = (elDeg * Math.PI) / 180;
@@ -614,9 +677,12 @@
       /* ---------------- Initial state ---------------- */
       rebuildRods(rodCount);
       updateLights();
+      applyShadows(); // ensure off by default, but consistent
 
       /* ---------------- Listeners ---------------- */
       renderModeSelect.addEventListener('change', applyRenderMode);
+
+      shadowsSelect.addEventListener('change', applyShadows);
 
       packingSelect.addEventListener('change', layoutRods);
       spacingSlider.addEventListener('input', layoutRods);
@@ -680,7 +746,8 @@
           rod.userData.phase += 0.03;
 
           const hoverTravel = Math.sin(rod.userData.phase) * rod.userData.hoverStrength * interactionAmount;
-          const letterTravel = (letterMask[i] || 0) * letterMix * LETTER_AMPLITUDE;
+          const m = (letterMask[i] || 0);
+          const letterTravel = m * letterMix * LETTER_AMPLITUDE;
 
           rod.position.copy(rod.userData.basePosition);
           rod.position.y += (hoverTravel + letterTravel);
